--- a/templates/etc_ssh_sshd_config.j2
+++ b/templates/etc_ssh_sshd_config.j2
@@ -6,31 +6,33 @@ Port 22
 # Use these options to restrict which interfaces/protocols sshd will bind to
 #ListenAddress ::
 #ListenAddress 0.0.0.0
-Protocol 2
-# HostKeys for protocol version 2
+
 HostKey /etc/ssh/ssh_host_rsa_key
 HostKey /etc/ssh/ssh_host_ecdsa_key
 HostKey /etc/ssh/ssh_host_ed25519_key
-#Privilege Separation is turned on for security
-UsePrivilegeSeparation yes
 
-# Lifetime and size of ephemeral version 1 server key
-KeyRegenerationInterval 3600
-ServerKeyBits 768
+# Ciphers and keying
+#RekeyLimit default none
 
 # Logging
-# SyslogFacility AUTH
 SyslogFacility AUTHPRIV
 # LogLevel INFO
 
 # Authentication:
-# LoginGraceTime 2m
+
+#LoginGraceTime 2m
 PermitRootLogin without-password
-# StrictModes yes
-# PubkeyAuthentication yes
-# AuthorizedKeysFile	%h/.ssh/authorized_keys
+#StrictModes yes
+#MaxAuthTries 6
+#MaxSessions 10
+
+#PubkeyAuthentication yes
+
+# Expect .ssh/authorized_keys2 to be disregarded by default in future.
+#AuthorizedKeysFile	.ssh/authorized_keys .ssh/authorized_keys2
 
 #AuthorizedPrincipalsFile none
+
 #AuthorizedKeysCommand none
 #AuthorizedKeysCommandUser nobody
 
@@ -39,16 +41,16 @@ PermitRootLogin without-password
 # Change to yes if you don't trust ~/.ssh/known_hosts for
 # HostbasedAuthentication
 #IgnoreUserKnownHosts no
-
 # Don't read the user's ~/.rhosts and ~/.shosts files
-IgnoreRhosts yes
+#IgnoreRhosts yes
+
+# To disable tunneled clear text passwords, change to no here!
+#PasswordAuthentication yes
+#PermitEmptyPasswords no
 
 # Change to yes to enable challenge-response passwords (beware issues with
 # some PAM modules and threads)
 ChallengeResponseAuthentication no
-
-# Change to no to disable tunnelled clear text passwords
-PasswordAuthentication yes
 
 # Kerberos options
 #KerberosAuthentication no
@@ -62,23 +64,12 @@ PasswordAuthentication yes
 #GSSAPIStrictAcceptorCheck yes
 #GSSAPIKeyExchange no
 
-# UsePrivilegeSeparation sandbox		# Default for new installations.
-
-# MaxStartups 10:30:60
-# Banner /etc/issue.net
-
-# Allow client to pass locale environment variables
-AcceptEnv LANG LC_*
-AcceptEnv XMODIFIERS
-
-Subsystem sftp internal-sftp -f AUTH -l VERBOSE
-
 # Set this to 'yes' to enable PAM authentication, account processing,
 # and session processing. If this is enabled, PAM authentication will
 # be allowed through the ChallengeResponseAuthentication and
 # PasswordAuthentication.  Depending on your PAM configuration,
 # PAM authentication via ChallengeResponseAuthentication may bypass
-# the setting of "PermitRootLogin without-password".
+# the setting of "PermitRootLogin yes
 # If you just want the PAM account and session checks to run without
 # PAM authentication, then enable this but set PasswordAuthentication
 # and ChallengeResponseAuthentication to 'no'.
@@ -94,8 +85,6 @@ X11Forwarding yes
 PrintMotd no
 #PrintLastLog yes
 #TCPKeepAlive yes
-#UseLogin no
-#UsePrivilegeSeparation sandbox
 #PermitUserEnvironment no
 #Compression delayed
 #ClientAliveInterval 0
@@ -112,6 +101,9 @@ PrintMotd no
 
 # Allow client to pass locale environment variables
 AcceptEnv LANG LC_*
+AcceptEnv XMODIFIERS
+
+Subsystem sftp internal-sftp -f AUTH -l VERBOSE
 
 # Set default sftp users group
 # Match Group sftp-users,!admin,!dev,!backup
